<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PIKJEJ</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_alt_travel">AltTravel</string>
    <string name="title_activity_userguide">Userguide</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_predictor">Predictor</string>
    <string name="title_activity_terms">Terms</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_home">Home</string>
    <string name="Clock">DigitalClock</string><string name="page_about"><b>The PIKJEJ Application was created by the PIKJEJ development team.</b> \n \n <b> Project Leader:</b> \n Joseph Bolton \n\n <b>Team Members:</b> \n Ethan Tsang \n James Cassidy \n Peter Fletcher \n Ian Cannon \n  Kyle Ryan \n\n PIKJEJ Car Park Application \n Version 7.1 \n Copyright 2013 PIKJEJ \n\n Map facilities provided by Google Maps \n\n </string>
    <string name="alt_travel_merseyrail">Merseyrail</string><string name="alt_travel_arriva">Arriva Bus Schedules</string>
    <string name="alt_travel_stagecoach">Stagecoach Bus Schedules</string>
    <string name="alt_travel_slt">South Lancs Travel Bus Schedules</string>
    

</resources> 