<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".Schedule" >

    <ImageButton
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/ic_tab_home_unselected"
        android:contentDescription="@string/title_activity_home"
        android:onClick="Home" />

    <ImageButton
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/home"
        android:background="@drawable/ic_tab_settings_unselected"
        android:contentDescription="@string/title_activity_settings"
        android:onClick="Settings" />

    <ImageButton
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/settings"
        android:background="@drawable/ic_tab_about_unselected"
        android:contentDescription="@string/title_activity_about"
        android:onClick="About" />

    <ImageButton
        android:id="@+id/userguide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/about"
        android:background="@drawable/ic_tab_userguide_unselected"
        android:contentDescription="@string/title_activity_userguide"
        android:onClick="Userguide" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/title_activity_schedule"
        android:text="@string/title_activity_schedule"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>